--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "prettier": "^2.6.2"
   },
   "repository": {
